samples/_failures_safe/1761141081_86dc30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c5d5b63.c: In function ‘main’:
./samples/SAFE/__tmp_6c5d5b63.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_6c5d5b63.c:139:9: error: expected declaration or statement at end of input
